src/test/ui/closures/2229_closure_analysis/unsafe_ptr.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/unsafe_ptr.rs:26:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error[E0658]: attributes on expressions are experimental
  --> $DIR/unsafe_ptr.rs:46:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/unsafe_ptr.rs:4:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/unsafe_ptr.rs:29:6
   |
LL | /      || unsafe {
LL | |
LL | |
LL | |         println!("{:?}", (*t.0).s);
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),Deref,(0, 0)] -> ImmBorrow
  --> $DIR/unsafe_ptr.rs:32:26
   |
LL |         println!("{:?}", (*t.0).s);
   |                          ^^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/unsafe_ptr.rs:29:6
   |
LL | /      || unsafe {
LL | |
LL | |
LL | |         println!("{:?}", (*t.0).s);
LL | |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ImmBorrow
  --> $DIR/unsafe_ptr.rs:32:26
   |
LL |         println!("{:?}", (*t.0).s);
   |                          ^^^^^^^^

error: First Pass analysis includes:
  --> $DIR/unsafe_ptr.rs:49:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = unsafe { &mut (*p).s };
...  |
LL | |         *x = "s".into();
LL | |     };
   | |_____^
   |
note: Capturing p[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/unsafe_ptr.rs:52:31
   |
LL |         let x = unsafe { &mut (*p).s };
   |                               ^^^^^^

error: Min Capture analysis includes:
  --> $DIR/unsafe_ptr.rs:49:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = unsafe { &mut (*p).s };
...  |
LL | |         *x = "s".into();
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> ImmBorrow
  --> $DIR/unsafe_ptr.rs:52:31
   |
LL |         let x = unsafe { &mut (*p).s };
   |                               ^^^^^^

error: aborting due to 6 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
